--- a/neuronetwork/neuronetwork.vbproj
+++ b/neuronetwork/neuronetwork.vbproj
@@ -76,6 +76,7 @@
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Matrix1.vb" />
     <Compile Include="Module1.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
